src/SciSDK_DLL.h


SCISDK_DLL_API void * SCISDK_InitLib();
SCISDK_DLL_API int SCISDK_FreeLib(void *handle);
SCISDK_DLL_API int SCISDK_AddNewDevice(char *DevicePath, char *DeviceModel, char *JSONFwFilePath, char *Name, void *handle);
SCISDK_DLL_API int SCISDK_DetachDevice(char* name, void*handle);
SCISDK_DLL_API int SCISDK_SetParameterString(char* Path, char* value, void* handle);
SCISDK_DLL_API int SCISDK_SetParameterInteger(char* Path, int value, void*handle);
SCISDK_DLL_API int SCISDK_SetParameterUInteger(char* Path, uint32_t value, void* handle);
SCISDK_DLL_API int SCISDK_SetParameterDouble(char* Path, double value, void*handle);
SCISDK_DLL_API int SCISDK_GetParameterString(char* Path, char** value, void* handle);
SCISDK_DLL_API int SCISDK_GetParameterInteger(char* Path, int *value, void*handle);
SCISDK_DLL_API int SCISDK_GetParameterUInteger(char* Path, uint32_t* value, void* handle);
SCISDK_DLL_API int SCISDK_GetParameterDouble(char* Path, double*value, void*handle);
SCISDK_DLL_API int SCISDK_DecodeData(char* Path, void*buffer_in, void*buffer_out, void*handle);
SCISDK_DLL_API int SCISDK_AllocateBuffer(char* Path, T_BUFFER_TYPE buffer_type, void **buffer, void *handle);
SCISDK_DLL_API int SCISDK_AllocateBufferSize(char* Path, T_BUFFER_TYPE buffer_type, void **buffer, void *handle, int size);
SCISDK_DLL_API int SCISDK_SetRegister(char* Path, uint32_t value, void* handle);
SCISDK_DLL_API int SCISDK_GetRegister(char* Path, uint32_t*value, void*handle);
SCISDK_DLL_API int SCISDK_FreeBuffer(char* Path, int buffer_type, void **buffer, void*handle);
SCISDK_DLL_API int SCISDK_ReadData(char *Path, void *buffer, void*handle);
SCISDK_DLL_API int SCISDK_ReadStatus(char *Path, void *buffer, void*handle);
SCISDK_DLL_API int SCISDK_s_error(int err_no, char** value, void* handle);
SCISDK_DLL_API int SCISDK_ExecuteCommand(char* Path, char* value, void* handle);
SCISDK_DLL_API int SCISDK_GetComponentList(char* name, char* Type, char** ret, bool return_json, void* handle);
SCISDK_DLL_API int SCISDK_GetAllParameters(char* Path, char **ret, void*handle);
SCISDK_DLL_API int SCISDK_GetParameterDescription(char* Path, char** ret, void* handle);
SCISDK_DLL_API int SCISDK_GetParameterListOfValues(char* Path, char** ret, void* handle);
SCISDK_DLL_API int SCISDK_GetParameterMinimumValue(char* Path, double* re, void* handle);
SCISDK_DLL_API int SCISDK_GetParameterMaximumValue(char* Path, double* ret, void* handle);
SCISDK_DLL_API int SCISDK_GetParametersProperties(char *Path, char **ret, void *handle);
SCISDK_DLL_API int SCISDK_free_string(char * _str);